# TrabalhoPersistencia2

./: .env  .gitignore  README.md  database.db  divisao_tarefas.txt  divisão_tarefas.txt  hello.py  linkgithub.txt  pyproject.toml  test.db
app/: config.py  crud.py  database.py  db.py  main.py  models.py  routes.py  schemas.py
app/crud/: estoque.py  fornecedor.py  remedio.py
app/models/: __init__.py  base.py  estoque.py  fornecedor.py  remedio.py
app/routes/: estoque.py  fornecedor.py  remedio.py
app/schemas/: estoque.py  fornecedor.py  remedio.py
